Salesforce/src/objects/Game__c.object
<CustomObject>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maximum_Points_Possible__c</fullName>
        <label>Maximum Points Possible</label>
        <summarizedField>Mission__c.Max_Point_Value__c</summarizedField>
        <summaryForeignKey>Mission__c.Game__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <defaultValue>now() + 7</defaultValue>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <formula>IF( NOW() &lt; Start_Date_Time__c,&quot;The Game has not started&quot;,
TEXT(FLOOR(End_Date_Time__c - now())) &amp; &quot; Days: &quot; &amp;
TEXT(FLOOR(((End_Date_Time__c - now()) - FLOOR(End_Date_Time__c - now())) * 24)) &amp; &quot; Hrs: &quot; &amp;
IF(
	FLOOR(End_Date_Time__c - now()) &gt; 0,
	TEXT(ROUND((((MOD(((End_Date_Time__c - now()) - (FLOOR(End_Date_Time__c - now()))) , (FLOOR(End_Date_Time__c - now()))) * 24) - (FLOOR(((End_Date_Time__c - now()) - (FLOOR(End_Date_Time__c - now()))) * 24))) * 60),0)) &amp; &quot; Mins&quot;,
	TEXT(ROUND((((MOD(((End_Date_Time__c - now()) - (FLOOR(End_Date_Time__c - now()))) , 1) * 24) - (FLOOR(((End_Date_Time__c - now()) - (FLOOR(End_Date_Time__c - now()))) * 24))) * 60),0)) &amp; &quot; Mins&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining</label>
        <type>Text</type>
    </fields>
    <label>Game</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Maximum_Points_Possible__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Time_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>